[DevTools] Expose 'inspect fallback' on chrome://inspect

This is only shown if the remote browser is newer than host browser.
Since we don't support forward compatibility, the best we can do
is to fallback to local frontend hoping that helps a bit.

Bug: 803988
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I2ef248dfd5ddae9c5ac9c335a5172e08a8c5b8e2
Reviewed-on: https://chromium-review.googlesource.com/929352
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Eugene Ostroukhov <eostroukhov@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538329}
Former-commit-id: d0a01560e2845547a92a05c60e0feb268d5e672f